Added some sponsors

--- a/www/locales/en.json
+++ b/www/locales/en.json
@@ -22,7 +22,7 @@
 
         "info": {
             "thanks": "Jyväsmetro has ended! Thank you for participating! Hope to see you again next year!",
-            "coming-soon": "Coming soon... Follow on <a href=\"https://www.instagram.com/jyvasmetro\">Instagram</a> to stay on track!",
+            "coming-soon": "Coming soon... Follow on <a href=\"https://www.instagram.com/jyvasmetro\">Instagram</a> and <a href=\"https://t.me/jyvasmetro2025\">Telegram</a> to stay on track!",
             "to-sales": "⇓ Ticket sales ⇓",
             "secondary-market": "Didn't get a ticket or can't use yours? Buy and sell tickets on <a href=\"https://app.ticketless.fi/events/8\" target=\"_blank\" rel=\"noopener noreferrer\" style=\"color: dodgerblue; font-weight: 600;\">Ticketless</a>!",
             "p1": "Read more about partners, afterparty and ticket sales below!",
@@ -57,7 +57,7 @@
 
         "partners": {
             "menu-title": "Partners",
-            "title": "Partners 2024"
+            "title": "Partners 2025"
         },
 
         "songs": {
