--- a/www/locales/fi.json
+++ b/www/locales/fi.json
@@ -22,7 +22,7 @@
 
         "info": {
             "thanks": "Jyväsmetro on päättynyt. Kiitos osallistujille! Nähdään ensi vuonna!",
-            "coming-soon": "Coming soon... Seuraa <a href=\"https://www.instagram.com/jyvasmetro\">Instassa</a> pysyäksesi matkassa mukana!",
+            "coming-soon": "Coming soon... Seuraa <a href=\"https://www.instagram.com/jyvasmetro\">Instassa</a> ja <a href=\"https://t.me/jyvasmetro2025\">Telegrammissa</a> pysyäksesi matkassa mukana!",
             "to-sales": "⇓ Lipunmyyntiin ⇓",
             "secondary-market": "Jäitkö ilman lippua, tai jäikö lippu ylimääräiseksi? Osta ja myy metroliput <a href=\"https://app.ticketless.fi/events/8\" target=\"_blank\" rel=\"noopener noreferrer\" style=\"color: dodgerblue; font-weight: 600;\">Ticketless</a>:ssä!",
             "p1": "Mukana olevista baareista, jatkoista, yhteistyökumppaneista ja lipunmyynnistä voit lukea lisää alta!",
@@ -57,7 +57,7 @@
 
         "partners": {
             "menu-title": "Yhteistyökumppanit",
-            "title": "Yhteistyö&shy;kumppanit 2024"
+            "title": "Yhteistyö&shy;kumppanit 2025"
         },
 
         "songs": {
