--- a/i18n/fi.yaml
+++ b/i18n/fi.yaml
@@ -2,7 +2,7 @@
   translation: Jyväsmetro
 
 - id: year
-  translation: 2025
+  translation: "2025"
 
 - id: name-with-year
   translation: Jyväsmetro 2025
