fix dysfunctional navbar

--- a/i18n/fi.yaml
+++ b/i18n/fi.yaml
@@ -1,6 +1,9 @@
 - id: partners
   translation: Yhteistyökumppanit
 
+- id: partners-id
+  translation: yhteistyokumppanit
+
 - id: songs
   translation: Laulut
 
